@@ -1,3 +1,6 @@
+* Allow to re-compute cost price
+* Allow to change unit price of move done
+
 Version 3.6.0 - 2015-04-20
 * Bug fixes (see mercurial logs for details)
 * Add support for PyPy
